[metadata]
name = dread-level-editor
description = Basic level editor/visualizer for Dread map files.
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment


[options]
packages = find:
install_requires =
    mercury-engine-data-structures>=0.2.0
    imgui[glfw]

include_package_data = True
zip_safe = False
python_requires = >=3.9

[options.packages.find]
exclude =
    test

